[package]
name = "mindbender"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
image = "0.25.4"
indicatif = "0.17.8"
ratatui = "0.29.0"
rayon = "1.10.0"
thiserror = "1.0.66"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
predicates = "3.1.2"
